[metadata]
name = spamostack
version = 0.0.1
summary = Tool for creating requests to OpenStack with fake drivers
description-file = README.md
license = Apache-2.0
author = Mikhail Ivanov, Daniil Trishkin
author-email = mivanov@mirantis.com, dtrishkin@mirantis.com
classifiers =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Operating System :: POSIX :: Linux

[files]
packages =
	spamostack

[entry_points]
console_scripts =
	spamostack = spamostack:main

[wheel]
universal = 1
